--- a/src/main/webapp/styles/app_styles.css
+++ b/src/main/webapp/styles/app_styles.css
@@ -1,61 +1,41 @@
 .board{
     width: fit-content;
-    border: 10px solid #11262e;
     border-radius: 5px;
     margin: 10px auto;
     position: fixed;
     top: 50px;
     left:460px;
+    box-shadow: 20px 20px 50px 15px grey;
 }
-.player1{
+.player1, .player2, .player3, .player4{
     width: 250px;
     height: 200px;
-    border: 5px solid #d44044;
-    border-radius: 5px;
-    border-style:dashed;
+    border-radius: 10px;
     margin: 10px auto;
     position: fixed;
+    padding: 10px;
+    box-shadow: 20px 20px 50px 15px grey;
+}
+.player1{
     top: 50px;
     left: 100px;
 }
 .player2{
-    width: 250px;
-    height: 200px;
-    border: 5px solid #4b73e2;
-    border-radius: 5px;
-    border-style:dashed;
-    margin: 10px auto;
-    position: fixed;
     top: 480px;
     left: 100px;
 
 }
 .player3{
-    width: 250px;
-    height: 200px;
-    border: 5px solid #3d8119;
-    border-radius: 5px;
-    border-style:dashed;
-    margin: 10px auto;
-    position: fixed;
     top: 50px;
     left: 1200px;
-
 }
 .player4{
-    width: 250px;
-    height: 200px;
-    border: 5px solid #d5d500;
-    border-radius: 10px;
-    border-style:dashed;
-    margin: 10px auto;
-    position: fixed;
     top: 480px;
     left: 1200px;
-
 }
-p2{
-    background-color: #329932;
+#time{
+    position: relative;
+    left: 80%;
 }
 .fa-chess-pawn{
     position: relative;
@@ -117,7 +97,7 @@ p2{
     width: 40px; height: 40px;
     float: left;
     margin: 16px;
-    border: 1px solid black;
+    
 }
 
 h1{
@@ -142,7 +122,7 @@ h1{
     background: #329932;
 }
 
-.dice1 {
+.dice {
     display: grid;
     height: 4em;
     width: 4em;
@@ -150,55 +130,11 @@ h1{
     background: black;
     margin-bottom: 1em;
     grid-template-columns: 1em 1em 1em;
-    row-template-column: 1em 1em 1em;
     grid-column-gap: 0.25em;
     align-items: center;
     justify-content: center;
     border-radius: 1em;
 }
-.dice2 {
-    display: grid;
-    height: 4em;
-    width: 4em;
-    padding: 0.3em;
-    background: black;
-    margin-bottom: 1em;
-    grid-template-columns: 1em 1em 1em;
-    row-template-column: 1em 1em 1em;
-    grid-column-gap: 0.25em;
-    align-items: center;
-    justify-content: center;
-    border-radius: 1em;
-}
-.dice3 {
-    display: grid;
-    height: 4em;
-    width: 4em;
-    padding: 0.3em;
-    background: black;
-    margin-bottom: 1em;
-    grid-template-columns: 1em 1em 1em;
-    row-template-column: 1em 1em 1em;
-    grid-column-gap: 0.25em;
-    align-items: center;
-    justify-content: center;
-    border-radius: 1em;
-}
-.dice4 {
-    display: grid;
-    height: 4em;
-    width: 4em;
-    padding: 0.3em;
-    background: black;
-    margin-bottom: 1em;
-    grid-template-columns: 1em 1em 1em;
-    row-template-column: 1em 1em 1em;
-    grid-column-gap: 0.25em;
-    align-items: center;
-    justify-content: center;
-    border-radius: 1em;
-}
-
 .dot1,.dot2,.dot3,.dot4 {
     background: white;
     border-radius: 2em;
@@ -214,9 +150,7 @@ h1{
     background: black;
 }
 .log-out{
-    position: relative;
-    bottom: 20%;
-    left: 97%;
+    position: fixed;
 }
 .log-out button{
     border: white;
